--- a/yo/app/styles/components/sport-navigation.css
+++ b/yo/app/styles/components/sport-navigation.css
@@ -17,7 +17,7 @@
     width: 0;
     height: 0;
     border-top: 4px dashed;
-    border-top: 4px solid\9;
+    border-top: 4px solid;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
 }
